--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -5,8 +5,8 @@
     "noUnusedLocals": true,
     "outDir": "lib",
     "sourceMap": true,
-    "strict": true,
-    "target": "es2017"
+    "strict": false,
+    "target": "es2020"
   },
   "compileOnSave": true,
   "include": [
